--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-APP_PORT=3000
+APP_PORT = 3000
+
+DB_CONNECTION = postgres
+DB_HOST = localhost
+DB_PORT = 5432
+DB_PORT_FOR_OFFICE = 3000
+DB_USERNAME = postgres
+DB_PASSWORD = arsenpost
+DB_NAME = converter
+
