--- a/.gitignore
+++ b/.gitignore
@@ -70,8 +70,8 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.development
 .env.test
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -106,3 +106,6 @@ dist
 
 .devcontainer
 .vscode
+.DS_Store
+.idea
+task.md
