--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "express_app_template",
+  "name": "steam_test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:development": "nodemon --config nodemon.json src/index.ts",
+		"start:production": "node build index.js",
+		"build": "tsc",
+		"test": "npm run editorconfig && npm run format && npm run lint",
+		"format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+		"lint": "eslint . --ext .ts",
+		"editorconfig": "editorconfig-checker",
+		"pre-commit": "husky"
   },
   "repository": {
     "type": "git",
@@ -18,19 +25,18 @@
   },
   "homepage": "https://github.com/Arsen302/express_app_template#readme",
   "dependencies": {
-    "express": "4.17.1",
     "dotenv": "10.0.0",
+    "express": "4.17.1",
     "swagger-jsdoc": "^6.2.0",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
-    "@types/dotenv": "8.2.0",
     "@types/eslint": "8.2.1",
-    "@types/prettier": "2.4.2",
     "@types/express": "4.17.13",
     "@types/jest": "^27.1.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.9",
+    "@types/prettier": "2.4.2",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
@@ -45,14 +51,14 @@
     "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
-    "prettier": "2.5.1",
-    "lint-staged": "^10.5.4",
     "jest": "^27.1.0",
-    "nodemon": "2.0.15",
-    "ts-node": "10.4.0",
-    "ts-jest": "27.1.0",
-    "typescript": "4.5.2",
+    "lint-staged": "^10.5.4",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "prettier": "2.5.1",
+    "ts-jest": "27.1.0",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.2",
     "winston": "^3.7.2"
   }
 }
